QueryStageBatchedDeleteTest dbtest crashes in checkpoint thread

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 6.2.0-rc2, 6.3.0-rc0, 6.0.10
    • Affects Version/s: None
    • Component/s: None
    • None
    • Fully Compatible
    • ALL
    • v6.2, v6.0
    • Execution Team 2022-11-28
    • 135
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      This dbtest replaces the global TickSource before running each test case, which may cause issues for background jobs that expect a stable TickSource instance in the global service context. This describes a similar problem that was addressed in SERVER-65652. One possible solution would be to create a shared instance of the MockTickSource for all the tests in QueryStageBatchedDeleteTest to access.

            Assignee:
            Benety Goh (Inactive)
            Reporter:
            Benety Goh (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: