SERVER-71498 QueryStageBatchedDeleteTest initializes TickSourceMock once